# libklsmpte2064

./: .gitignore  Makefile.am  README.md  configure.ac
doxygen/: libklsmpte2064.doxyconf
src/: Makefile.am  core-audio.c  core-csc.c  core-encapsulation.c  core-private.h  core-video.c  core.c  libklsmpte2064.pc.in
src/libklsmpte2064/: core-audio.h  core-csc.h  core-encapsulation.h  core-video.h  core.h  klsmpte2064.h
tools/: Makefile.am  util.c
